Fixes gallery thumbs aspect ratio on mobile

--- a/src/sass/component/_gallery.scss
+++ b/src/sass/component/_gallery.scss
@@ -42,6 +42,7 @@
 .c-gallery-item__thumbnail-image {
   display:block;
   width:100%;
+  max-width:none;
 }
 .c-gallery-item--landscape {
   .c-gallery-item__thumbnail-image {
